--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <section id="intro">
 <h2>A clear definition of ACAB meaning</h2>
-<p>ACAB is an acronym that has appeared in protests, graffiti, music, and online discussions for decades. Understanding what ACAB stands for, where it came from, and how it is used today requires careful attention to context, history, and the communities that employ it. This site provides an educational, neutral overview of the ACAB meaning for readers worldwide who encounter the term and want to understand its significance without bias or oversimplification.</p>
+<p>ACAB is an acronym that has appeared in protests, graffiti, music, and online discussions for decades. Understanding what ACAB stands for, where it came from, and how it is used today requires careful attention to context, history, and the communities that employ it. This site provides an educational, neutral overview of the <a href="https://supabet.ca/">Supabet Login</a> meaning for readers worldwide who encounter the term and want to understand its significance without bias or oversimplification.</p>
 <p>The phrase carries strong political and social connotations, and its interpretation varies widely depending on geography, subculture, and individual perspective. Whether you have seen ACAB in street art, social media, or news coverage of demonstrations, this resource will help you grasp the acronym definition, its historical roots, and the debates surrounding its use.</p>
 <blockquote>
 <p>"Understanding controversial language requires context, not just dictionary definitions. ACAB is a slogan rooted in critique of institutions, not individuals alone."</p>
